# django-flexible-forms

./: .gitignore  .pre-commit-config.yaml  README.md  mypy.ini  pyproject.toml  setup.cfg  setup.py
.github/workflows/: build.yml  pre-commit.yml  release.yml
docs/: Makefile  conf.py  index.rst
flexible_forms/: __init__.py  admin.py  apps.py  cache.py  fields.py  forms.py  models.py  serializers.py  signals.py  urls.py  utils.py  views.py  widgets.py
flexible_forms/static/flexible_forms/admin/: code-editor-admin-widget.css
flexible_forms/templates/flexible_forms/widgets/: compoundvaluewidget.html
services/api/: .isort.cfg
tests/: .coveragerc  conftest.py  manage.py
tests/quiz_builder/: admin.py  apps.py  models.py
tests/quiz_builder/tests/: factories.py  test_fields.py  test_models.py  test_views.py  test_widgets.py
tests/test_app/: __init__.py  admin.py  apps.py  models.py
tests/test_app/management/commands/: generate_test_form.py
tests/test_app/tests/: factories.py  test_admin.py  test_models.py  test_utils.py
tests/test_project/: asgi.py  settings.py  urls.py  wsgi.py
